[package]
name = "brc"
version = "0.1.0"
authors = ["Thomas Duckworth <tduck973564@gmail.com>"]
edition = "2018"
description = "Library providing a simple, quick console for Rust projects."
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.2.0"
colored = "2.0.0"