[package]
name = "rusterm"
version = "0.2.2"
authors = ["Thomas <tduck973564@gmail.com>"]
edition = "2018"
description = "Library providing a simple, quick command line interpreter for Rust projects."
license = "GPL-3.0"
documentation = "https://docs.rs/rusterm/"
repository = "https://github.com/tduck973564/rusterm"
keywords = ["console", "terminal", "commands", "cli"]
categories = ["command-line-interface", "compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "9.0.0"
colored = "2.0.0"
doc-comment = "0.3.3"
